--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   align-items: center;              
   justify-content: center;          
   text-align: center;
-  background: url("/images/hero.webp") center/cover no-repeat; 
+  background: url("./images/hero.webp") center/cover no-repeat; 
   overflow: hidden;
 }
 
